[package]
name = "znp-rs"
version = "0.1.0"
authors = ["qm3ster <qm3ster@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.1"
bytes = "0.4.12"
futures-preview = { version = "=0.3.0-alpha.16", features = ["compat", "async-await", "nightly"] }
num-derive = "0.2.5"
num-traits = "0.2.8"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
serde_repr = "0.1.4"
tokio = { version = "0.1.21" }
tokio-serial = "3.2.14"
packed_struct = "0.3.0"
packed_struct_codegen = "0.3.0"
