[package]
name = "znp-rs"
version = "0.1.0"
authors = ["qm3ster <qm3ster@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
bytes = "0.4.12"
futures-preview = "0.3.0-alpha.19"
num-derive = "0.3.0"
num-traits = "0.2.8"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
serde_repr = "0.1.5"
tokio = "0.2.0-alpha.6"
tokio-serial = "4.3.3-tokio-0.2.0-alpha.2"
packed_struct = "0.3.0"
packed_struct_codegen = "0.3.0"
