[package]
name = "znp-rs"
version = "0.1.0"
authors = ["qm3ster <qm3ster@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
bytes = "0.5.3"
num-derive = "0.3.0"
num-traits = "0.2.11"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
serde_repr = "0.1.5"
tokio = { version = "0.2.9", features = ["full"] }
tokio-serial = "4.3.3"
packed_struct = "0.3.0"
packed_struct_codegen = "0.3.0"
tokio-util = { version = "0.2.0", features = ["codec"] }
futures-util = { version = "0.3.1", features = ["sink"] }
